# mlops-zoomcamp-2025-capstone-citibike

./: .env.local  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  run.py
.zen/: config.yaml
configs/zenml/: pipelines.local.yaml
data/processed/citibike/: 2024-citibike-tripdata.parquet  2025-citibike-tripdata.parquet
data/processed/weather/: 2024-weather.parquet  2025-weather.parquet
data/raw/weather/: 2023-weather.parquet  2025-weather.parquet
data/test/: data-001.json  data-002.json  test-modeling.parquet  train-modeling.parquet
deployment/bentoml/: service.py
deployment/docker-compose/: docker-compose.yaml
deployment/docker-compose/grafana/config/: grafana_datasources.yaml
deployment/docker-compose/grafana/dashboards/: citibike_prediction_drift.json  data_drift.json
docs/: architecture.md  config-environment.md  datasets.md  eda.md  ml-workflow.md  running-workflow.md  technology-stack.md
infra/zenml/stacks/: citibike-data-bucket-policy.json  localstack-backup.sh  localstack-setup.sh  setup_local_stack.sh  zenml-artifacts-bucket-policy.json
notebooks/: EDA.ipynb  Model.ipynb  Training.ipynb  test-Copy1.ipynb  test.ipynb
pipelines/: deployment.py  monitoring.py  training.py
steps/: __init__.py  data_loaders.py  data_validator.py  hpo_tuner.py  inference_predict.py  model_deployer.py  model_evaluator.py  model_monitor.py  model_promoter.py  model_register.py  model_trainer.py  model_validator.py  notify_on.py
tests/integration/: test_bentoml.py
tests/unit/: test01.py
utils/: promotion_helper.py  tracker_helper.py
