[project]
name = "mlops-zoomcamp-2025-capstone-citibike"
version = "0.1.0"
description = "capstone-citibike for mlops-zoomcamp-2025"
authors = [
    {name = "emmuzoo",email = "edison.marcelo.muzo.oyana@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pip-tools (>=7.5.0,<8.0.0)",
    "zenml (>=0.55.2)",
    "pdfkit (>=1.0.0,<2.0.0)",
    "optuna (<4)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "scikit-learn (<1.6.0)",
    "pylint (>=3.3.7,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.5"
jupyter-resource-usage = "^1.1.1"
ipywidgets = "^8.1.7"
pre-commit = "^4.2.0"
flake8 = "^7.3.0"
pytest = "^8.4.1"

